内置工具集成。